...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/otherUserAvatarImageView"
            app:layout_constraintTop_toTopOf="@id/otherUserAvatarImageView"
            tools:text="@string/verification_verify_user" />

        <FrameLayout
            android:id="@+id/bottomSheetFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otherUserAvatarImageView" />

...
